cangjie-language-server/test/message/diagnostic/LSP_Diagnostic_EnumPattern_001.base
{"jsonrpc":"2.0","method":"textDocument/extendPublishDiagnostics","params":{"diagnostics":[{"category":2,"code":386,"message":"initializer's type is incompatible with variable declaration 'howManyYears' ","range":{"end":{"character":27,"line":25},"start":{"character":22,"line":25}},"severity":1,"source":"Cangjie"},{"category":2,"code":420,"message":"different name of variables are introduced in enum pattern","range":{"end":{"character":13,"line":26},"start":{"character":9,"line":26}},"severity":1,"source":"Cangjie"},{"category":2,"code":419,"message":"different number of variables are introduced in enum pattern","range":{"end":{"character":13,"line":26},"start":{"character":9,"line":26}},"severity":1,"source":"Cangjie"},{"category":2,"code":420,"message":"different name of variables are introduced in enum pattern","range":{"end":{"character":13,"line":27},"start":{"character":9,"line":27}},"severity":1,"source":"Cangjie"},{"category":2,"code":265,"message":"undeclared identifier 'y'","range":{"end":{"character":35,"line":27},"start":{"character":34,"line":27}},"severity":1,"source":"Cangjie"}],"uri":"file:///d%3A/Work/repo/Char/NewVersion/cangjie_language_server/test/testChr/normalTest/PatternMatch/src/enumPattern/enumPattern.cj"}}